fix. review 소나클라우드 에러 수정 및 service부분 파일업로드 로직 변경